--- a/configs/socfpga_de10_pro_defconfig
+++ b/configs/socfpga_de10_pro_defconfig
@@ -1,7 +1,9 @@
 CONFIG_ARM=y
 CONFIG_ARCH_SOCFPGA=y
+CONFIG_SYS_TEXT_BASE=0x1000
 CONFIG_SYS_MALLOC_F_LEN=0x2000
-CONFIG_SPL_FAT_SUPPORT=y
+CONFIG_NR_DRAM_BANKS=1
+CONFIG_SPL_FS_FAT=y
 CONFIG_TARGET_SOCFPGA_TERASIC_DE10_PRO=y
 CONFIG_IDENT_STRING="socfpga_stratix10"
 CONFIG_DEFAULT_DEVICE_TREE="socfpga_stratix10_de10_pro"
@@ -16,9 +18,11 @@ CONFIG_CMD_FAT=y
 # CONFIG_CMD_FLASH is not set
 CONFIG_CMD_FS_GENERIC=y
 # CONFIG_CMD_IMLS is not set
+CONFIG_OF_EMBED=y
 CONFIG_CMD_MEMTEST=y
 CONFIG_CMD_MII=y
 CONFIG_CMD_MMC=y
+CONFIG_BOUNCE_BUFFER=y
 CONFIG_CMD_PING=y
 CONFIG_CMD_SF=y
 CONFIG_SPL=y
@@ -31,7 +35,10 @@ CONFIG_ENV_IS_IN_MMC=y
 CONFIG_DFU_MMC=y
 CONFIG_MMC_DW=y
 CONFIG_SPI_FLASH=y
-CONFIG_SPI_FLASH_BAR=y
+CONFIG_SF_DEFAULT_MODE=0x2003
+CONFIG_SF_DEFAULT_SPEED=50000000
+CONFIG_SF_DEFAULT_BUS=0
+CONFIG_SF_DEFAULT_CS=0
 CONFIG_SPI_FLASH_SPANSION=y
 CONFIG_SPI_FLASH_STMICRO=y
 CONFIG_CADENCE_QSPI=y
@@ -43,8 +50,8 @@ CONFIG_USB_STORAGE=y
 CONFIG_DM_ETH=y
 CONFIG_NET_RANDOM_ETHADDR=y
 CONFIG_ETH_DESIGNWARE=y
+CONFIG_MII=y
 CONFIG_SYS_NS16550=y
-CONFIG_USE_TINY_PRINTF=y
 CONFIG_HUSH_PARSER=y
 CONFIG_FPGA_ALTERA=y
 CONFIG_FPGA_STRATIX10=y
